crates/kms/tests/snapshots/behavior_serde__backend_config_local_shape.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: shape_of(&local_backend)
---
Local:
  file_permissions: "<number>"
  key_dir: "<string>"
  master_key: "<null>"
