crates/kms/tests/snapshots/behavior_serde__backend_config_static_shape.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: shape_of(&static_backend)
---
Static:
  key_id: "<string>"
