crates/kms/tests/snapshots/behavior_serde__backup_artifact_field_names.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: field_names(artifact)
---
- aead_algorithm
- encrypted_digest
- kind
- len
- path
