crates/kms/tests/snapshots/behavior_serde__backup_kek_descriptor_field_names.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: field_names(&manifest.backup_kek)
---
- aead_algorithm
- kek_id
- kek_version
