crates/kms/tests/snapshots/behavior_serde__backup_local_kdf_field_names.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: "field_names(manifest.local_kdf.as_ref().expect(\"local kdf\"))"
---
- derivation
- protection_modes
