crates/kms/tests/snapshots/behavior_serde__sse_s3_encryption_context_keys.snap
---
source: crates/kms/tests/behavior_serde.rs
expression: context_keys
---
- algorithm
- bucket
- object
- object_key
